--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,3 @@
 @use "../scss/base/index";
 @use "../scss/utilities/variables";
-@use "../scss/components/button";
-@use "../scss/layout/nesting";
+@use "../scss/components/badges";
