--- a/src/scss/components/_badges.scss
+++ b/src/scss/components/_badges.scss
@@ -1,4 +1,4 @@
-.badge {
+%badge {
   min-width: 96px;
   padding: 4px 8px;
   color: #fff;
@@ -10,16 +10,20 @@
   letter-spacing: 0.07px;
   border-radius: 20px;
   background-color: #92929d;
+  margin-right: 10px;
 }
 
-$status: (
-  "completed": purple,
-  "ended": salmon,
-  "active": lightgreen,
-);
+.badge-completed {
+  @extend %badge;
+  background-color: purple;
+}
 
-@each $name, $color in $status {
-  .badge-#{$name} {
-    background-color: $color;
-  }
+.badge-ended {
+  @extend %badge;
+  background-color: #f44336;
+}
+
+.badge-active {
+  @extend %badge;
+  background-color: #4caf50;
 }
