--- a/src/scss/components/_badges.scss
+++ b/src/scss/components/_badges.scss
@@ -1,29 +1,15 @@
-%badge {
-  min-width: 96px;
-  padding: 4px 8px;
-  color: #fff;
-  text-align: center;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 20px; /* 142.857% */
-  letter-spacing: 0.07px;
-  border-radius: 20px;
-  background-color: #92929d;
-  margin-right: 10px;
+@mixin frame_size($width, $height: $width) {
+  width: $width;
+  height: $height;
 }
 
-.badge-completed {
-  @extend %badge;
-  background-color: purple;
+.avatar {
+  @include frame-size(150px);
+  border-radius: 50%;
+  @extend %size;
 }
 
-.badge-ended {
-  @extend %badge;
-  background-color: #f44336;
-}
-
-.badge-active {
-  @extend %badge;
-  background-color: #4caf50;
+.icon {
+  @include frame-size(50px);
+  @extend %size;
 }
