--- a/src/scss/components/_badges.scss
+++ b/src/scss/components/_badges.scss
@@ -13,3 +13,68 @@
   @include frame-size(50px);
   @extend %size;
 }
+
+@mixin position(
+  $layer-index,
+  $display,
+  $position-x: 50%,
+  $position-y: $position-x,
+  $offset-x: $position-x,
+  $offset-y: $position-x
+) {
+  position: $position-type;
+  top: $position-y;
+  left: $position-x;
+  transform: translate($offset-x * -1, $offset-y * -1);
+  z-index: $layer-index;
+  display: $display;
+}
+
+.decoration {
+  @include position($layer-index: 100, block, $offset-y: 70%);
+}
+
+@mixin btn-size($args...) {
+  @for $i from 1 through length($args) {
+    #{nth($large, $i)} {
+      $factor: ($i * 4 - 4);
+      padding: (4px + $factor) (8px + $factor);
+      border-radius: (8px + $factor);
+    }
+  }
+}
+
+@include btn-size(50px, 50px);
+
+@use "sass: meta";
+
+@mixin btn-type($types...) {
+  @each $name, $color in meta.keywords($types) {
+    .btn-#{$name} {
+      border: 2px solid $color;
+      color: $color;
+    }
+  }
+}
+
+@include btn-type(
+  $success: lightgreen,
+  $error: light-red,
+  $warning: light-yellow,
+  $info: light-blue
+);
+
+@mixin hover {
+  &:not([disabled]):hover {
+    @content;
+  }
+}
+
+.button {
+  background-color: white;
+  border: 2px solid black;
+  @include hover($state: disabled) {
+    color: white;
+    background-color: blue;
+  }
+}
