--- a/src/scss/components/_badges.scss
+++ b/src/scss/components/_badges.scss
@@ -1,29 +1,21 @@
-@use "sass:list";
+@use "sass:map";
 
-$numbers: 10px, 12px, 16px;
-@debug list.nth($numbers, 2);
+$color-primary: purple;
+$color-secondary: green;
+$color-accent: blue;
+$color-background: orange;
 
-$colors: lightgreen, tomato, lightblue;
-@debug list.length($colors);
+$colors: (
+  "primary": $color-primary,
+  "secondary": $color-secondary,
+  "accent": $color-accent,
+  "background": $color-background,
+);
 
-$sizes: 40px, 50px, 80px;
-
-@each $size in $sizes {
-  .icon-#{$size} {
-    font-size: $size;
-    height: $size;
-    width: $size;
-  }
+body {
+  background-color: map.get($colors, "background");
 }
 
-$button-types: ".btn-sm", ".btn-md", ".btn-lg", ".btn-xl";
-
-@mixin btn-size($types) {
-  @for $i from 1 through list.length($types) {
-    #{list.nth($types, $i)} {
-      $factor: ($i * 5 - 5);
-    }
-  }
+@function get-color($key) {
+  @return map.get($colors, $key);
 }
-
-@include btn-size($button-types);
