--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
-@use "../scss/base/index";
-@use "../scss/utilities/variables";
-@use "../scss/components/badges";
+@use "utils";
+
+:root {
+  font-family: sans-serif;
+}
